Made half endpoints in EventsController